--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
          <nav>
             <a href="portfolio.html">Home</a>
             <a href="#">About</a>
-            <a href="#">Skills</a>
+            <a href="skills.html">Skills</a>
             <a href="contact.html">Contact</a>
          </nav>
     </header>
